# baresipui

./: .dockerignore  .gitignore  CUSTOM-BUILD-README.md  Dockerfile  Dockerfile.frontend  LICENSE  README-CONTACT-PATCH.md  README.docker.md  app.config.ts  baresip-build.sh  compose.build-from-source.yaml  compose.yaml  docker-compose.yml  nginx.conf  nuxt.config.ts  package-lock.json  package.json  prometheus.yml  tsconfig.base.json  tsconfig.json
.github/workflows/: main.yml  release-baresip.yml  release-ui.yml
backend/: Dockerfile  package.json
backend/src/: server.js
baresip/: .asoundrc  .asoundrc_mono  BUILD.md  Dockerfile  Dockerfile.build-from-source  Makefile  patch-account.sh  rtcpstats_periodic.c
baresip-config/: accounts  config  contacts
baresip/config/: config  current_contact  uuid
baresip/modules/: CMakeLists.txt  notifier.c  presence.c  pubip.c  subscriber.c
baresip/modules/rtcpstats_cmd/: CMakeLists.txt  module.mk  rtcpstats_cmd.c
baresip/patches/: baresip-add-rtcpstats-module.patch  baresip-noop.patch  baresip-staggered-registration.patch  baresip-use-sipreg-public-ip.patch  baresip-use-sipreg-public-ip.patch.backup  baresip-use-sipreg-public-ip.patch.bak  create_baresip_public_ip_patch.py  create_debug_patch.py  fix_patch.py  libre-add-ob-to-contact.patch  libre-always-add-received-rport.patch  libre-always-add-received-rport.patch.backup  libre-fix-ob-parameter-position.patch.disabled  re-sipreg-local-sdp.patch  re-sipreg-public-ip.patch  re-sipreg-public-ip.patch.backup  re-sipreg-public-ip.patch.bak  re-sipreg-public-ip.patch.new  re-sipreg-public-ip.patch.old  update_patch.py
components/: AccountCard.vue  CallStatisticsModal.vue  ContactCard.vue  SettingsPanel.vue
composables/: useSocketIO.ts  useWebSocket.ts
pages/: baresip-logs.vue  index.vue  logs.vue
server/: socket-server.ts
server/api/: accounts.get.ts  baresip-logs.get.ts  command.post.ts  contacts.get.ts  events.get.ts  health.get.ts  logs.get.ts
server/api/autoconnect/: [contact].post.ts  assign.post.ts
server/api/logs/: clear.post.ts
server/plugins/: baresip.ts  socket.ts
server/routes/: _ws.ts
server/services/: autoconnect-config.ts  baresip-connection.ts  baresip-logger.ts  baresip-parser.ts  state-manager.ts
server/utils/: logger.ts  netstring.ts
types/: index.ts
